--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -1,4 +1,3 @@
-
 @font-face{
     font-family: Poppins;
     src: url(../Fonte/Poppins-Medium.ttf);
@@ -12,11 +11,25 @@ body, nav ul, li, a, button, p, h1{
     font-family: Poppins;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 a{
     text-decoration: none;
     color: white;
     font-size: 25px;
-    
+}
+
+img {
+    max-width: 100%;
+    height: auto;
 }
 
 header{
@@ -70,7 +83,7 @@ nav ul{
     display: flex;
     position: absolute;
     width: 100%;
-    margin-top: 420px;
+    margin-top: 360px;
     justify-content: center;
 }
 
@@ -135,7 +148,6 @@ nav ul{
     margin-bottom: 20px;
 }
 
-
 .banner2{
     display: flex;
     margin: 20px 0 20px 0;
@@ -197,7 +209,6 @@ nav ul{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    
 }
 
 #Produtos img{
@@ -230,14 +241,12 @@ nav ul{
     color: #029e3b;
 }
 
-
 #Sobre h1{
     display: flex;
     justify-content: center;
     color: #EA5905;
     font-size: 30px;
     padding-top: 35px;
-    
 }
 
 #Sobre p{
@@ -245,7 +254,6 @@ nav ul{
     text-align: justify;
     justify-content: center;
     padding: 0 70px;
-    
 }
 
 .mvv{
@@ -263,7 +271,6 @@ nav ul{
 .coluna h1 {
     color: #EA5905;
     font-size: 30px;
-    padding-top: 35px;
 }
 
 .coluna p {
@@ -271,10 +278,53 @@ nav ul{
     font-size: 14px;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 1124px) {
+    #Produtos{
+        display: flex;
+        justify-content: center;
+    }
+    #Produtos img{
+        padding: 30px;
+    }
+}
 
+@media (max-width: 770px) {
+    .banner1{
+        display: flex;
+        flex-direction: column;
+    }
+    .texto1{
+        padding: 0;
+        font-size: 1em;
+    }
+    .banner2{
+        display: flex;
+        flex-direction: column;
+    }
+    .texto2{
+        padding: 0;
+        font-size: 5px;
+    }
+    .bannerBtn{
+        margin-bottom: 10px;
+    }
+    #Produtos{
+        padding: 0;
+        justify-content: center;
+    }
+    .mvv{
+        display: flex;
+        flex-direction: column;
+    }
+    .mvv h1{
+        text-align: center;
+    }
+}
+
+@media (max-width: 500px) {
     header {
         flex-direction: column; 
+       width: 100%;
     }
 
     nav ul {
@@ -302,38 +352,18 @@ nav ul{
         padding: 0;
         font-size: 5px;
     }
-    .bannerBtn{
-        margin-bottom: 10px;
+    #Produtos, .bannerBtn {
+        padding-right: 70px;
     }
     #Produtos{
-       padding: 0;
-       justify-content: center;
-    }
-    .mvv{
-        display: flex;
-        flex-direction: column;
-    }
-    .mvv h1{
-        text-align: center;
-    }
-}
-
-@media (max-width: 770px) {
-
-    nav ul {
-     padding: 20px;
-    }
-
-    .texto1{
-        padding: 0;
-        
-    }
-    .texto2{
-        padding: 0;
-        font-size: 1rem;
+        justify-content: center;
+        padding-left: 30px;
     }
     .bannerBtn{
-        margin-bottom: 10px;
+        padding: 10px;
+    }
+    .icon{
+        right: 1px;
     }
     .mvv{
         display: flex;
